k8s/loadbalancer/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lb-a
  namespace: demo-istio-lb
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx-lb
  template:
    metadata:
      labels:
        app: nginx-lb
        version: A
    spec:
      containers:
      - name: nginx-lb
        image: leoviana00/nginx-loadbalancer-service:a
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lb-b
  namespace: demo-istio-lb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-lb
  template:
    metadata:
      labels:
        app: nginx-lb
        version: B
    spec:
      containers:
      - name: nginx-lb
        image: leoviana00/nginx-loadbalancer-service:b
        ports:
        - containerPort: 80
