k8s/loadbalancer/nginx-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-lb-destination-rule
  namespace: demo-istio-lb
spec:
  host: nginx-lb-service.demo-istio-lb.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2    
      labels:
        version: B
